# fintech-document-intelligence

./: .gitignore  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  env.example  requirements-dev.txt  setup-bulletproof.ps1  setup-project-robust.ps1  setup-project.ps1  setup-simple.ps1
.github/workflows/: ci.yml  frontend-ci.yml  go-service-ci.yml  ml-service-ci.yml
api-gateway/: Dockerfile  alembic.ini  main.py  requirements.txt
api-gateway/alembic/: env.py
api-gateway/app/: config.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  README.md
docs/api/: README.md
fintech-ai-platform/: .env.example  .gitignore  README.md
frontend/: Dockerfile  nginx.conf
frontend/src/: App.tsx
go-service/: Dockerfile  go.mod  main.go
go-service/config/: config.go
go-service/handlers/: handlers.go
go-service/middleware/: middleware.go
go-service/models/: models.go
go-service/services/: services.go
java-service/: Dockerfile  pom.xml
k8s/deployments/: api-gateway.yaml  frontend.yaml  go-service.yaml  java-service.yaml  ml-service.yaml  ocr-service.yaml
k8s/infrastructure/: kafka.yaml  postgres.yaml  redis.yaml
ml-service/: Dockerfile  main.py  requirements.txt
monitoring/: README.md
ocr-service/: CMakeLists.txt  Dockerfile
ocr-service/src/: api_handler.cpp  api_handler.h  main.cpp  ocr_engine.cpp  ocr_engine.h
scripts/: deploy-platform.sh  monitoring-quickstart.sh  setup-alerts.sh  setup-local.sh  setup-monitoring.sh
security/: security_hardening.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
(+76 files in other folders)
